# habits

./: README.md  api.service  frontend_nginx  package.json  reload.sh  setup.sh
app/: index.html  package.json  pnpm-lock.yaml
app/src/: App.tsx  api.ts  types.ts
app/src/components/: HabitModal.tsx  HabitRow.tsx  TopBar.tsx
app/src/hooks/: useDashboard.ts
backend/: background.py  crud.py  database.py  habits.db  main.py  models.py  pyproject.toml  schemas.py
backend/routers/: habits.py  records.py
